fix spacing between mobile free and premium plans on pricing page

--- a/breeze.scss
+++ b/breeze.scss
@@ -294,6 +294,11 @@ a
     padding: 30px;
 }
 
+.reversespacing
+{
+    margin: -30px;
+}
+
 
 /* fonts */
 @font-face 
